# ContainerScan

./: .env.example  .gitignore  DESIGN.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_container_code_dash_format.py  0003_label_first_container_flow.py  0004_print_sheets.py  0005_container_tags.py  0006_container_colour.py  0007_remove_tag_colour.py  0008_color_options.py
backend/routers/: colors.py  containers.py  images.py  labels.py  print_sheets.py  rooms.py  scan.py
backend/scripts/: seed_dev_data.py
backend/tests/: test_code_generator.py  test_containers_api.py  test_images_api.py  test_reference_data_api.py  test_scan_api.py  test_schema_metadata.py
backend/utils/: code_generator.py  image_storage.py  qr_labels.py
deploy/: nginx.conf
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: api.js  server-api.js
frontend/src/routes/: +layout.js  +layout.server.js  +layout.svelte  +page.js  +page.server.js  +page.svelte
frontend/src/routes/advanced-search/: +page.server.js  +page.svelte
frontend/src/routes/print/: +page.server.js  (+1 more)
frontend/tests/routes/: advanced-search.page.test.js  container-create.page.test.js  container-detail.page.test.js  dashboard.page.test.js  layout.page.test.js  print.page.test.js  rooms.page.test.js  scan.page.test.js
(+8 files in other folders)
